--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -404,6 +404,7 @@ a.author[href$="sna_fu_bar"]:after,
 a.author[href$="starkinmn"]:after,
 a.author[href$="TheCommieDuck"]:after,
 a.author[href$="Broken_Wagonwheel"]:after,
+a.author[href$="Ubahootah"]:after,
 a.author[href$="Dundrioundio"]:after
 
 {   border-radius: 4px;
@@ -430,6 +431,7 @@ a.author[href$="HatzHeartsIcecream"]:after {content: " ❤ "}
 a.author[href$="Dwarflord"]:after {content: " Super Star Clopfic Writer "}
 a.author[href$="moonomnom"]:after {content: " Dayum shame"}
 a.author[href$="Broken_Wagonwheel"]:after {content: " Sang's Slave "}
+a.author[href$="Ubahootah"]:after {content: " Yep "}
 a.author[href$="Dundrioundio"]:after {content: " Never cuddle "}
 
 /* This is to append something to everyone. Remove comments to activate*/
