--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -473,7 +473,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -563,7 +563,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -663,7 +663,7 @@ a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|=
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
-a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"]
+a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"], a[href|="/flaskhead"], a[href|="/lemonflask"]
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
@@ -1274,3 +1274,4 @@ a[href|="/karmascrunch"] {width:90px;height:125px;background-position: 0 -345px;
 a[href|="/daringcute"] {width:88px;height:100px;background-position: -90px -325px;}
 a[href|="/floofdash"] {width:109px;height:150px;background-position: -231px -83px;}
 a[href|="/notenoughbloom"] {width:113px;height:150px;background-position: -340px 0;}
+a[href|="/treehugger"] {width:76px;height:100px;background-position: -90px -425px;}
